--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "assignment 3/code/sudoku-csp"]
 	path = assignment 3/code/sudoku-csp
 	url = https://github.com/FrancescaGrimaldi/sudoku-csp.git
+[submodule "assignment 4/code/pacman"]
+	path = assignment 4/code/pacman
+	url = https://github.com/FrancescaGrimaldi/pacman.git
